# MyPlayerMusic

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/liyaan/myplayermusic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/liyaan/myplayermusic/: MainActivity.kt  PermissionUtils.kt  PlayerMusic.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/liyaan/myplayermusic/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
